// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | ChapterCard.vue template should match snapshot 1`] = `
<article class="chapter">
  <header class="chapter__header">
    <h2 class="chapter__title">
      My title
    </h2>
    <p class="chapter__position">
      82
    </p>
  </header>
  <div class="chapter__content"><img src="webf" alt="An image showing Title of the first paragraph" rel="noreferrer" class="chapter__image"></div>
  <footer class="chapter__footer">
    <ul class="paragraph-container">
      <li class="paragraph">
        <h3 class="chapter__footer_text">
          Title of the first paragraph
        </h3>
      </li>
    </ul>
    <ul class="paragraph-container">
      <li class="paragraph">
        <p class="chapter__footer_text"><a href="https://github.com/trollepierre" rel="noreferrer" target="_blank">
            https://github.com/trollepierre
          </a></p>
      </li>
    </ul>
    <ul class="paragraph-container">
      <li class="paragraph">
        <h3 class="chapter__footer_text">
          url
        </h3>
      </li>
    </ul>
    <ul class="paragraph-container">
      <li class="paragraph"><iframe width="512" height="288" src="https://www.youtube.com/embed/-18AYp_7iW0?rel=0&amp;modestbranding=1" title="My title" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen="allowfullscreen" class="youtube-iframe"></iframe></li>
    </ul>
  </footer>
</article>
`;

exports[`Component | ChapterCard.vue template should match snapshot when imgLink is not set 1`] = `
<article class="chapter">
  <header class="chapter__header">
    <h2 class="chapter__title">
      My title
    </h2>
    <p class="chapter__position">
      82
    </p>
  </header>
  <div class="chapter__content">
    <div class="missing-image" style="height: 288px;">
      Missing image
    </div>
  </div>
  <footer class="chapter__footer">
    <ul class="paragraph-container">
      <li class="paragraph">
        <h3 class="chapter__footer_text">
          Title of the first paragraph
        </h3>
      </li>
    </ul>
    <ul class="paragraph-container">
      <li class="paragraph">
        <p class="chapter__footer_text"><a href="https://github.com/trollepierre" rel="noreferrer" target="_blank">
            https://github.com/trollepierre
          </a></p>
      </li>
    </ul>
    <ul class="paragraph-container">
      <li class="paragraph">
        <h3 class="chapter__footer_text">
          url
        </h3>
      </li>
    </ul>
    <ul class="paragraph-container">
      <li class="paragraph"><iframe width="512" height="288" src="https://www.youtube.com/embed/-18AYp_7iW0?rel=0&amp;modestbranding=1" title="My title" allow="accelerometer; encrypted-media; gyroscope;" allowfullscreen="allowfullscreen" class="youtube-iframe"></iframe></li>
    </ul>
  </footer>
</article>
`;
